// Vitest Snapshot v1

exports[`accent atom 1`] = `
VStackBox {
  "align": undefined,
  "atom": AccentAtom {
    "accent": SymAtom {
      "char": "^",
      "charBox": true,
      "command": "^",
      "elem": null,
      "fonts": [
        "Main-R",
      ],
      "kind": "ord",
      "parent": null,
      "style": undefined,
    },
    "body": MathGroup {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "char": "j",
          "charBox": true,
          "command": "j",
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": [Circular],
          "style": undefined,
        },
      ],
      "elem": null,
      "kind": null,
      "parent": [Circular],
    },
    "elem": null,
    "kind": "ord",
    "parent": null,
  },
  "children": [
    SymBox {
      "atom": SymAtom {
        "char": "^",
        "charBox": true,
        "command": "^",
        "elem": null,
        "fonts": [
          "Main-R",
        ],
        "kind": "ord",
        "parent": null,
        "style": undefined,
      },
      "char": "^",
      "font": "Main-R",
      "italic": 0,
      "rect": {
        "depth": 0,
        "height": 0.69444,
        "width": 0.5,
      },
      "space": {
        "bottom": -0.431,
      },
      "style": undefined,
    },
    HBox {
      "atom": MathGroup {
        "body": [
          FirstAtom {
            "elem": null,
            "kind": null,
            "parent": [Circular],
          },
          SymAtom {
            "char": "j",
            "charBox": true,
            "command": "j",
            "elem": null,
            "fonts": [
              "Math-I",
            ],
            "kind": "ord",
            "parent": [Circular],
            "style": undefined,
          },
        ],
        "elem": null,
        "kind": null,
        "parent": AccentAtom {
          "accent": SymAtom {
            "char": "^",
            "charBox": true,
            "command": "^",
            "elem": null,
            "fonts": [
              "Main-R",
            ],
            "kind": "ord",
            "parent": null,
            "style": undefined,
          },
          "body": [Circular],
          "elem": null,
          "kind": "ord",
          "parent": null,
        },
      },
      "children": [
        FirstBox {
          "atom": FirstAtom {
            "elem": null,
            "kind": null,
            "parent": MathGroup {
              "body": [
                [Circular],
                SymAtom {
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": [Circular],
                  "style": undefined,
                },
              ],
              "elem": null,
              "kind": null,
              "parent": AccentAtom {
                "accent": SymAtom {
                  "char": "^",
                  "charBox": true,
                  "command": "^",
                  "elem": null,
                  "fonts": [
                    "Main-R",
                  ],
                  "kind": "ord",
                  "parent": null,
                  "style": undefined,
                },
                "body": [Circular],
                "elem": null,
                "kind": "ord",
                "parent": null,
              },
            },
          },
          "rect": {
            "depth": 0,
            "height": 0.4306,
            "width": 0,
          },
          "space": {},
        },
        SymBox {
          "atom": SymAtom {
            "char": "j",
            "charBox": true,
            "command": "j",
            "elem": null,
            "fonts": [
              "Math-I",
            ],
            "kind": "ord",
            "parent": MathGroup {
              "body": [
                FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": [Circular],
                },
                [Circular],
              ],
              "elem": null,
              "kind": null,
              "parent": AccentAtom {
                "accent": SymAtom {
                  "char": "^",
                  "charBox": true,
                  "command": "^",
                  "elem": null,
                  "fonts": [
                    "Main-R",
                  ],
                  "kind": "ord",
                  "parent": null,
                  "style": undefined,
                },
                "body": [Circular],
                "elem": null,
                "kind": "ord",
                "parent": null,
              },
            },
            "style": undefined,
          },
          "char": "j",
          "font": "Math-I",
          "italic": 0.05724,
          "rect": {
            "depth": 0.19444,
            "height": 0.65952,
            "width": 0.46905,
          },
          "space": {},
          "style": undefined,
        },
      ],
      "multiplier": undefined,
      "rect": {
        "depth": 0.19444,
        "height": 0.65952,
        "width": 0.46905,
      },
      "space": {},
    },
  ],
  "depth": 0.19444,
  "multiplier": undefined,
  "rect": {
    "depth": 0.19444,
    "height": 0.92296,
    "width": 0.5,
  },
  "shift": 0.22852000000000006,
  "space": {},
}
`;

exports[`frac atom 1`] = `
VBox {
  "align": undefined,
  "atom": FracAtom {
    "denom": MathGroup {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "char": "j",
          "charBox": true,
          "command": "j",
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": [Circular],
          "style": undefined,
        },
      ],
      "elem": null,
      "kind": null,
      "parent": [Circular],
    },
    "elem": null,
    "kind": "ord",
    "numer": MathGroup {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "char": "j",
          "charBox": true,
          "command": "j",
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": MathGroup {
            "body": [
              FirstAtom {
                "elem": null,
                "kind": null,
                "parent": [Circular],
              },
              [Circular],
            ],
            "elem": null,
            "kind": null,
            "parent": [Circular],
          },
          "style": undefined,
        },
      ],
      "elem": null,
      "kind": null,
      "parent": [Circular],
    },
    "parent": null,
  },
  "children": [
    {
      "box": HBox {
        "atom": MathGroup {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            SymAtom {
              "char": "j",
              "charBox": true,
              "command": "j",
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": MathGroup {
                "body": [
                  FirstAtom {
                    "elem": null,
                    "kind": null,
                    "parent": [Circular],
                  },
                  [Circular],
                ],
                "elem": null,
                "kind": null,
                "parent": FracAtom {
                  "denom": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "numer": [Circular],
                  "parent": null,
                },
              },
              "style": undefined,
            },
          ],
          "elem": null,
          "kind": null,
          "parent": FracAtom {
            "denom": MathGroup {
              "body": [
                FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": [Circular],
                },
                SymAtom {
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": [Circular],
                  "style": undefined,
                },
              ],
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            "elem": null,
            "kind": "ord",
            "numer": [Circular],
            "parent": null,
          },
        },
        "children": [
          FirstBox {
            "atom": FirstAtom {
              "elem": null,
              "kind": null,
              "parent": MathGroup {
                "body": [
                  [Circular],
                  SymAtom {
                    "char": "j",
                    "charBox": true,
                    "command": "j",
                    "elem": null,
                    "fonts": [
                      "Math-I",
                    ],
                    "kind": "ord",
                    "parent": MathGroup {
                      "body": [
                        FirstAtom {
                          "elem": null,
                          "kind": null,
                          "parent": [Circular],
                        },
                        [Circular],
                      ],
                      "elem": null,
                      "kind": null,
                      "parent": FracAtom {
                        "denom": [Circular],
                        "elem": null,
                        "kind": "ord",
                        "numer": [Circular],
                        "parent": null,
                      },
                    },
                    "style": undefined,
                  },
                ],
                "elem": null,
                "kind": null,
                "parent": FracAtom {
                  "denom": MathGroup {
                    "body": [
                      FirstAtom {
                        "elem": null,
                        "kind": null,
                        "parent": [Circular],
                      },
                      SymAtom {
                        "char": "j",
                        "charBox": true,
                        "command": "j",
                        "elem": null,
                        "fonts": [
                          "Math-I",
                        ],
                        "kind": "ord",
                        "parent": [Circular],
                        "style": undefined,
                      },
                    ],
                    "elem": null,
                    "kind": null,
                    "parent": [Circular],
                  },
                  "elem": null,
                  "kind": "ord",
                  "numer": [Circular],
                  "parent": null,
                },
              },
            },
            "rect": {
              "depth": 0,
              "height": 0.4306,
              "width": 0,
            },
            "space": {},
          },
          SymBox {
            "atom": SymAtom {
              "char": "j",
              "charBox": true,
              "command": "j",
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": MathGroup {
                "body": [
                  FirstAtom {
                    "elem": null,
                    "kind": null,
                    "parent": [Circular],
                  },
                  [Circular],
                ],
                "elem": null,
                "kind": null,
                "parent": FracAtom {
                  "denom": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "numer": MathGroup {
                    "body": [
                      FirstAtom {
                        "elem": null,
                        "kind": null,
                        "parent": [Circular],
                      },
                      [Circular],
                    ],
                    "elem": null,
                    "kind": null,
                    "parent": [Circular],
                  },
                  "parent": null,
                },
              },
              "style": undefined,
            },
            "char": "j",
            "font": "Math-I",
            "italic": 0.05724,
            "rect": {
              "depth": 0.19444,
              "height": 0.65952,
              "width": 0.46905,
            },
            "space": {},
            "style": undefined,
          },
        ],
        "multiplier": 1,
        "rect": {
          "depth": 0.19444,
          "height": 0.65952,
          "width": 0.46905,
        },
        "space": {},
      },
      "shift": 0.677,
    },
    {
      "box": RectBox {
        "atom": undefined,
        "classes": [
          "line",
        ],
        "rect": {
          "depth": 0,
          "height": 0.04,
          "width": 0,
        },
        "space": {
          "bottom": -0,
        },
      },
      "shift": 0.23,
    },
    {
      "box": HBox {
        "atom": MathGroup {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            SymAtom {
              "char": "j",
              "charBox": true,
              "command": "j",
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": [Circular],
              "style": undefined,
            },
          ],
          "elem": null,
          "kind": null,
          "parent": FracAtom {
            "denom": [Circular],
            "elem": null,
            "kind": "ord",
            "numer": MathGroup {
              "body": [
                FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": [Circular],
                },
                SymAtom {
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": [Circular],
                  "style": undefined,
                },
              ],
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            "parent": null,
          },
        },
        "children": [
          FirstBox {
            "atom": FirstAtom {
              "elem": null,
              "kind": null,
              "parent": MathGroup {
                "body": [
                  [Circular],
                  SymAtom {
                    "char": "j",
                    "charBox": true,
                    "command": "j",
                    "elem": null,
                    "fonts": [
                      "Math-I",
                    ],
                    "kind": "ord",
                    "parent": [Circular],
                    "style": undefined,
                  },
                ],
                "elem": null,
                "kind": null,
                "parent": FracAtom {
                  "denom": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "numer": MathGroup {
                    "body": [
                      FirstAtom {
                        "elem": null,
                        "kind": null,
                        "parent": [Circular],
                      },
                      SymAtom {
                        "char": "j",
                        "charBox": true,
                        "command": "j",
                        "elem": null,
                        "fonts": [
                          "Math-I",
                        ],
                        "kind": "ord",
                        "parent": [Circular],
                        "style": undefined,
                      },
                    ],
                    "elem": null,
                    "kind": null,
                    "parent": [Circular],
                  },
                  "parent": null,
                },
              },
            },
            "rect": {
              "depth": 0,
              "height": 0.4306,
              "width": 0,
            },
            "space": {},
          },
          SymBox {
            "atom": SymAtom {
              "char": "j",
              "charBox": true,
              "command": "j",
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": MathGroup {
                "body": [
                  FirstAtom {
                    "elem": null,
                    "kind": null,
                    "parent": [Circular],
                  },
                  [Circular],
                ],
                "elem": null,
                "kind": null,
                "parent": FracAtom {
                  "denom": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "numer": MathGroup {
                    "body": [
                      FirstAtom {
                        "elem": null,
                        "kind": null,
                        "parent": [Circular],
                      },
                      [Circular],
                    ],
                    "elem": null,
                    "kind": null,
                    "parent": [Circular],
                  },
                  "parent": null,
                },
              },
              "style": undefined,
            },
            "char": "j",
            "font": "Math-I",
            "italic": 0.05724,
            "rect": {
              "depth": 0.19444,
              "height": 0.65952,
              "width": 0.46905,
            },
            "space": {},
            "style": undefined,
          },
        ],
        "multiplier": 1,
        "rect": {
          "depth": 0.19444,
          "height": 0.65952,
          "width": 0.46905,
        },
        "space": {},
      },
      "shift": -0.686,
    },
  ],
  "multiplier": undefined,
  "rect": {
    "depth": 0.8804400000000001,
    "height": 1.3365200000000002,
    "width": 0.46905,
  },
  "space": {
    "left": 0.12,
    "right": 0.12,
  },
  "tag": false,
}
`;

exports[`leftright atom 1`] = `
HBox {
  "atom": LRAtom {
    "body": MathGroup {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "char": "j",
          "charBox": true,
          "command": "j",
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": [Circular],
          "style": undefined,
        },
      ],
      "elem": null,
      "kind": null,
      "parent": [Circular],
    },
    "elem": null,
    "kind": "inner",
    "left": "(",
    "parent": null,
    "right": ")",
  },
  "children": [
    SymBox {
      "atom": SymAtom {
        "char": "(",
        "charBox": true,
        "command": "(",
        "elem": null,
        "fonts": [
          "Main-R",
        ],
        "kind": "open",
        "parent": null,
        "style": undefined,
      },
      "char": "(",
      "font": "Main-R",
      "italic": 0,
      "rect": {
        "depth": 0.25,
        "height": 0.75,
        "width": 0.38889,
      },
      "space": {},
      "style": undefined,
    },
    HBox {
      "atom": MathGroup {
        "body": [
          FirstAtom {
            "elem": null,
            "kind": null,
            "parent": [Circular],
          },
          SymAtom {
            "char": "j",
            "charBox": true,
            "command": "j",
            "elem": null,
            "fonts": [
              "Math-I",
            ],
            "kind": "ord",
            "parent": [Circular],
            "style": undefined,
          },
        ],
        "elem": null,
        "kind": null,
        "parent": LRAtom {
          "body": [Circular],
          "elem": null,
          "kind": "inner",
          "left": "(",
          "parent": null,
          "right": ")",
        },
      },
      "children": [
        FirstBox {
          "atom": FirstAtom {
            "elem": null,
            "kind": null,
            "parent": MathGroup {
              "body": [
                [Circular],
                SymAtom {
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": [Circular],
                  "style": undefined,
                },
              ],
              "elem": null,
              "kind": null,
              "parent": LRAtom {
                "body": [Circular],
                "elem": null,
                "kind": "inner",
                "left": "(",
                "parent": null,
                "right": ")",
              },
            },
          },
          "rect": {
            "depth": 0,
            "height": 0.4306,
            "width": 0,
          },
          "space": {},
        },
        SymBox {
          "atom": SymAtom {
            "char": "j",
            "charBox": true,
            "command": "j",
            "elem": null,
            "fonts": [
              "Math-I",
            ],
            "kind": "ord",
            "parent": MathGroup {
              "body": [
                FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": [Circular],
                },
                [Circular],
              ],
              "elem": null,
              "kind": null,
              "parent": LRAtom {
                "body": [Circular],
                "elem": null,
                "kind": "inner",
                "left": "(",
                "parent": null,
                "right": ")",
              },
            },
            "style": undefined,
          },
          "char": "j",
          "font": "Math-I",
          "italic": 0.05724,
          "rect": {
            "depth": 0.19444,
            "height": 0.65952,
            "width": 0.46905,
          },
          "space": {},
          "style": undefined,
        },
      ],
      "multiplier": undefined,
      "rect": {
        "depth": 0.19444,
        "height": 0.65952,
        "width": 0.46905,
      },
      "space": {},
    },
    SymBox {
      "atom": SymAtom {
        "char": ")",
        "charBox": true,
        "command": ")",
        "elem": null,
        "fonts": [
          "Main-R",
        ],
        "kind": "open",
        "parent": null,
        "style": undefined,
      },
      "char": ")",
      "font": "Main-R",
      "italic": 0,
      "rect": {
        "depth": 0.25,
        "height": 0.75,
        "width": 0.38889,
      },
      "space": {},
      "style": undefined,
    },
  ],
  "multiplier": undefined,
  "rect": {
    "depth": 0.25,
    "height": 0.75,
    "width": 1.24683,
  },
  "space": {},
}
`;

exports[`matrix atom 1`] = `
HBox {
  "atom": MatrixAtom {
    "aligns": [],
    "elem": null,
    "grid": false,
    "hPos": [
      0,
      1.2000000000000002,
      2.4000000000000004,
    ],
    "kind": "inner",
    "labels": [],
    "parent": null,
    "rows": [
      [
        MathGroup {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            SymAtom {
              "char": "j",
              "charBox": true,
              "command": "j",
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": [Circular],
              "style": undefined,
            },
          ],
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        MathGroup {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            SymAtom {
              "char": "j",
              "charBox": true,
              "command": "j",
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": [Circular],
              "style": undefined,
            },
          ],
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
      ],
      [
        MathGroup {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            SymAtom {
              "char": "j",
              "charBox": true,
              "command": "j",
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": [Circular],
              "style": undefined,
            },
          ],
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        MathGroup {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
          ],
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
      ],
    ],
    "type": "pmatrix",
  },
  "children": [
    SymBox {
      "atom": SymAtom {
        "char": "(",
        "charBox": true,
        "command": "(",
        "elem": null,
        "fonts": [
          "Size3",
        ],
        "kind": "open",
        "parent": null,
        "style": undefined,
      },
      "char": "(",
      "font": "Size3",
      "italic": 0,
      "rect": {
        "depth": 0.95003,
        "height": 1.45,
        "width": 0.73611,
      },
      "space": {},
      "style": undefined,
    },
    VBox {
      "align": undefined,
      "atom": undefined,
      "children": [
        {
          "box": HBox {
            "atom": undefined,
            "children": [
              RectBox {
                "atom": undefined,
                "classes": [
                  "sep",
                  "hidden",
                ],
                "rect": {
                  "depth": 0.9500000000000002,
                  "height": 1.4500000000000002,
                  "width": 0.02,
                },
                "space": {
                  "bottom": -0.9500000000000002,
                },
              },
              VBox {
                "align": undefined,
                "atom": undefined,
                "children": [
                  {
                    "box": HBox {
                      "atom": MathGroup {
                        "body": [
                          FirstAtom {
                            "elem": null,
                            "kind": null,
                            "parent": [Circular],
                          },
                          SymAtom {
                            "char": "j",
                            "charBox": true,
                            "command": "j",
                            "elem": null,
                            "fonts": [
                              "Math-I",
                            ],
                            "kind": "ord",
                            "parent": [Circular],
                            "style": undefined,
                          },
                        ],
                        "elem": null,
                        "kind": null,
                        "parent": MatrixAtom {
                          "aligns": [],
                          "elem": null,
                          "grid": false,
                          "hPos": [
                            0,
                            1.2000000000000002,
                            2.4000000000000004,
                          ],
                          "kind": "inner",
                          "labels": [],
                          "parent": null,
                          "rows": [
                            [
                              [Circular],
                              [Circular],
                            ],
                            [
                              [Circular],
                              MathGroup {
                                "body": [
                                  FirstAtom {
                                    "elem": null,
                                    "kind": null,
                                    "parent": [Circular],
                                  },
                                ],
                                "elem": null,
                                "kind": null,
                                "parent": [Circular],
                              },
                            ],
                          ],
                          "type": "pmatrix",
                        },
                      },
                      "children": [
                        FirstBox {
                          "atom": FirstAtom {
                            "elem": null,
                            "kind": null,
                            "parent": MathGroup {
                              "body": [
                                [Circular],
                                SymAtom {
                                  "char": "j",
                                  "charBox": true,
                                  "command": "j",
                                  "elem": null,
                                  "fonts": [
                                    "Math-I",
                                  ],
                                  "kind": "ord",
                                  "parent": [Circular],
                                  "style": undefined,
                                },
                              ],
                              "elem": null,
                              "kind": null,
                              "parent": MatrixAtom {
                                "aligns": [],
                                "elem": null,
                                "grid": false,
                                "hPos": [
                                  0,
                                  1.2000000000000002,
                                  2.4000000000000004,
                                ],
                                "kind": "inner",
                                "labels": [],
                                "parent": null,
                                "rows": [
                                  [
                                    [Circular],
                                    [Circular],
                                  ],
                                  [
                                    [Circular],
                                    MathGroup {
                                      "body": [
                                        FirstAtom {
                                          "elem": null,
                                          "kind": null,
                                          "parent": [Circular],
                                        },
                                      ],
                                      "elem": null,
                                      "kind": null,
                                      "parent": [Circular],
                                    },
                                  ],
                                ],
                                "type": "pmatrix",
                              },
                            },
                          },
                          "rect": {
                            "depth": 0,
                            "height": 0.4306,
                            "width": 0,
                          },
                          "space": {},
                        },
                        SymBox {
                          "atom": SymAtom {
                            "char": "j",
                            "charBox": true,
                            "command": "j",
                            "elem": null,
                            "fonts": [
                              "Math-I",
                            ],
                            "kind": "ord",
                            "parent": MathGroup {
                              "body": [
                                FirstAtom {
                                  "elem": null,
                                  "kind": null,
                                  "parent": [Circular],
                                },
                                [Circular],
                              ],
                              "elem": null,
                              "kind": null,
                              "parent": MatrixAtom {
                                "aligns": [],
                                "elem": null,
                                "grid": false,
                                "hPos": [
                                  0,
                                  1.2000000000000002,
                                  2.4000000000000004,
                                ],
                                "kind": "inner",
                                "labels": [],
                                "parent": null,
                                "rows": [
                                  [
                                    [Circular],
                                    [Circular],
                                  ],
                                  [
                                    [Circular],
                                    MathGroup {
                                      "body": [
                                        FirstAtom {
                                          "elem": null,
                                          "kind": null,
                                          "parent": [Circular],
                                        },
                                      ],
                                      "elem": null,
                                      "kind": null,
                                      "parent": [Circular],
                                    },
                                  ],
                                ],
                                "type": "pmatrix",
                              },
                            },
                            "style": undefined,
                          },
                          "char": "j",
                          "font": "Math-I",
                          "italic": 0.05724,
                          "rect": {
                            "depth": 0.19444,
                            "height": 0.65952,
                            "width": 0.46905,
                          },
                          "space": {},
                          "style": undefined,
                        },
                      ],
                      "multiplier": undefined,
                      "rect": {
                        "depth": 0.19444,
                        "height": 0.65952,
                        "width": 0.46905,
                      },
                      "space": {},
                    },
                    "shift": 0.6100000000000001,
                  },
                  {
                    "box": HBox {
                      "atom": MathGroup {
                        "body": [
                          FirstAtom {
                            "elem": null,
                            "kind": null,
                            "parent": [Circular],
                          },
                          SymAtom {
                            "char": "j",
                            "charBox": true,
                            "command": "j",
                            "elem": null,
                            "fonts": [
                              "Math-I",
                            ],
                            "kind": "ord",
                            "parent": [Circular],
                            "style": undefined,
                          },
                        ],
                        "elem": null,
                        "kind": null,
                        "parent": MatrixAtom {
                          "aligns": [],
                          "elem": null,
                          "grid": false,
                          "hPos": [
                            0,
                            1.2000000000000002,
                            2.4000000000000004,
                          ],
                          "kind": "inner",
                          "labels": [],
                          "parent": null,
                          "rows": [
                            [
                              [Circular],
                              [Circular],
                            ],
                            [
                              [Circular],
                              MathGroup {
                                "body": [
                                  FirstAtom {
                                    "elem": null,
                                    "kind": null,
                                    "parent": [Circular],
                                  },
                                ],
                                "elem": null,
                                "kind": null,
                                "parent": [Circular],
                              },
                            ],
                          ],
                          "type": "pmatrix",
                        },
                      },
                      "children": [
                        FirstBox {
                          "atom": FirstAtom {
                            "elem": null,
                            "kind": null,
                            "parent": MathGroup {
                              "body": [
                                [Circular],
                                SymAtom {
                                  "char": "j",
                                  "charBox": true,
                                  "command": "j",
                                  "elem": null,
                                  "fonts": [
                                    "Math-I",
                                  ],
                                  "kind": "ord",
                                  "parent": [Circular],
                                  "style": undefined,
                                },
                              ],
                              "elem": null,
                              "kind": null,
                              "parent": MatrixAtom {
                                "aligns": [],
                                "elem": null,
                                "grid": false,
                                "hPos": [
                                  0,
                                  1.2000000000000002,
                                  2.4000000000000004,
                                ],
                                "kind": "inner",
                                "labels": [],
                                "parent": null,
                                "rows": [
                                  [
                                    [Circular],
                                    [Circular],
                                  ],
                                  [
                                    [Circular],
                                    MathGroup {
                                      "body": [
                                        FirstAtom {
                                          "elem": null,
                                          "kind": null,
                                          "parent": [Circular],
                                        },
                                      ],
                                      "elem": null,
                                      "kind": null,
                                      "parent": [Circular],
                                    },
                                  ],
                                ],
                                "type": "pmatrix",
                              },
                            },
                          },
                          "rect": {
                            "depth": 0,
                            "height": 0.4306,
                            "width": 0,
                          },
                          "space": {},
                        },
                        SymBox {
                          "atom": SymAtom {
                            "char": "j",
                            "charBox": true,
                            "command": "j",
                            "elem": null,
                            "fonts": [
                              "Math-I",
                            ],
                            "kind": "ord",
                            "parent": MathGroup {
                              "body": [
                                FirstAtom {
                                  "elem": null,
                                  "kind": null,
                                  "parent": [Circular],
                                },
                                [Circular],
                              ],
                              "elem": null,
                              "kind": null,
                              "parent": MatrixAtom {
                                "aligns": [],
                                "elem": null,
                                "grid": false,
                                "hPos": [
                                  0,
                                  1.2000000000000002,
                                  2.4000000000000004,
                                ],
                                "kind": "inner",
                                "labels": [],
                                "parent": null,
                                "rows": [
                                  [
                                    [Circular],
                                    [Circular],
                                  ],
                                  [
                                    [Circular],
                                    MathGroup {
                                      "body": [
                                        FirstAtom {
                                          "elem": null,
                                          "kind": null,
                                          "parent": [Circular],
                                        },
                                      ],
                                      "elem": null,
                                      "kind": null,
                                      "parent": [Circular],
                                    },
                                  ],
                                ],
                                "type": "pmatrix",
                              },
                            },
                            "style": undefined,
                          },
                          "char": "j",
                          "font": "Math-I",
                          "italic": 0.05724,
                          "rect": {
                            "depth": 0.19444,
                            "height": 0.65952,
                            "width": 0.46905,
                          },
                          "space": {},
                          "style": undefined,
                        },
                      ],
                      "multiplier": undefined,
                      "rect": {
                        "depth": 0.19444,
                        "height": 0.65952,
                        "width": 0.46905,
                      },
                      "space": {},
                    },
                    "shift": -0.5900000000000003,
                  },
                ],
                "multiplier": undefined,
                "rect": {
                  "depth": 0.7844400000000002,
                  "height": 1.26952,
                  "width": 0.46905,
                },
                "space": {
                  "right": 0.5,
                },
                "tag": false,
              },
              RectBox {
                "atom": undefined,
                "classes": [
                  "sep",
                  "hidden",
                ],
                "rect": {
                  "depth": 0.9500000000000002,
                  "height": 1.4500000000000002,
                  "width": 0.02,
                },
                "space": {
                  "bottom": -0.9500000000000002,
                },
              },
              VBox {
                "align": undefined,
                "atom": undefined,
                "children": [
                  {
                    "box": HBox {
                      "atom": MathGroup {
                        "body": [
                          FirstAtom {
                            "elem": null,
                            "kind": null,
                            "parent": [Circular],
                          },
                          SymAtom {
                            "char": "j",
                            "charBox": true,
                            "command": "j",
                            "elem": null,
                            "fonts": [
                              "Math-I",
                            ],
                            "kind": "ord",
                            "parent": [Circular],
                            "style": undefined,
                          },
                        ],
                        "elem": null,
                        "kind": null,
                        "parent": MatrixAtom {
                          "aligns": [],
                          "elem": null,
                          "grid": false,
                          "hPos": [
                            0,
                            1.2000000000000002,
                            2.4000000000000004,
                          ],
                          "kind": "inner",
                          "labels": [],
                          "parent": null,
                          "rows": [
                            [
                              [Circular],
                              [Circular],
                            ],
                            [
                              [Circular],
                              MathGroup {
                                "body": [
                                  FirstAtom {
                                    "elem": null,
                                    "kind": null,
                                    "parent": [Circular],
                                  },
                                ],
                                "elem": null,
                                "kind": null,
                                "parent": [Circular],
                              },
                            ],
                          ],
                          "type": "pmatrix",
                        },
                      },
                      "children": [
                        FirstBox {
                          "atom": FirstAtom {
                            "elem": null,
                            "kind": null,
                            "parent": MathGroup {
                              "body": [
                                [Circular],
                                SymAtom {
                                  "char": "j",
                                  "charBox": true,
                                  "command": "j",
                                  "elem": null,
                                  "fonts": [
                                    "Math-I",
                                  ],
                                  "kind": "ord",
                                  "parent": [Circular],
                                  "style": undefined,
                                },
                              ],
                              "elem": null,
                              "kind": null,
                              "parent": MatrixAtom {
                                "aligns": [],
                                "elem": null,
                                "grid": false,
                                "hPos": [
                                  0,
                                  1.2000000000000002,
                                  2.4000000000000004,
                                ],
                                "kind": "inner",
                                "labels": [],
                                "parent": null,
                                "rows": [
                                  [
                                    [Circular],
                                    [Circular],
                                  ],
                                  [
                                    [Circular],
                                    MathGroup {
                                      "body": [
                                        FirstAtom {
                                          "elem": null,
                                          "kind": null,
                                          "parent": [Circular],
                                        },
                                      ],
                                      "elem": null,
                                      "kind": null,
                                      "parent": [Circular],
                                    },
                                  ],
                                ],
                                "type": "pmatrix",
                              },
                            },
                          },
                          "rect": {
                            "depth": 0,
                            "height": 0.4306,
                            "width": 0,
                          },
                          "space": {},
                        },
                        SymBox {
                          "atom": SymAtom {
                            "char": "j",
                            "charBox": true,
                            "command": "j",
                            "elem": null,
                            "fonts": [
                              "Math-I",
                            ],
                            "kind": "ord",
                            "parent": MathGroup {
                              "body": [
                                FirstAtom {
                                  "elem": null,
                                  "kind": null,
                                  "parent": [Circular],
                                },
                                [Circular],
                              ],
                              "elem": null,
                              "kind": null,
                              "parent": MatrixAtom {
                                "aligns": [],
                                "elem": null,
                                "grid": false,
                                "hPos": [
                                  0,
                                  1.2000000000000002,
                                  2.4000000000000004,
                                ],
                                "kind": "inner",
                                "labels": [],
                                "parent": null,
                                "rows": [
                                  [
                                    [Circular],
                                    [Circular],
                                  ],
                                  [
                                    [Circular],
                                    MathGroup {
                                      "body": [
                                        FirstAtom {
                                          "elem": null,
                                          "kind": null,
                                          "parent": [Circular],
                                        },
                                      ],
                                      "elem": null,
                                      "kind": null,
                                      "parent": [Circular],
                                    },
                                  ],
                                ],
                                "type": "pmatrix",
                              },
                            },
                            "style": undefined,
                          },
                          "char": "j",
                          "font": "Math-I",
                          "italic": 0.05724,
                          "rect": {
                            "depth": 0.19444,
                            "height": 0.65952,
                            "width": 0.46905,
                          },
                          "space": {},
                          "style": undefined,
                        },
                      ],
                      "multiplier": undefined,
                      "rect": {
                        "depth": 0.19444,
                        "height": 0.65952,
                        "width": 0.46905,
                      },
                      "space": {},
                    },
                    "shift": 0.6100000000000001,
                  },
                  {
                    "box": HBox {
                      "atom": MathGroup {
                        "body": [
                          FirstAtom {
                            "elem": null,
                            "kind": null,
                            "parent": [Circular],
                          },
                        ],
                        "elem": null,
                        "kind": null,
                        "parent": MatrixAtom {
                          "aligns": [],
                          "elem": null,
                          "grid": false,
                          "hPos": [
                            0,
                            1.2000000000000002,
                            2.4000000000000004,
                          ],
                          "kind": "inner",
                          "labels": [],
                          "parent": null,
                          "rows": [
                            [
                              MathGroup {
                                "body": [
                                  FirstAtom {
                                    "elem": null,
                                    "kind": null,
                                    "parent": [Circular],
                                  },
                                  SymAtom {
                                    "char": "j",
                                    "charBox": true,
                                    "command": "j",
                                    "elem": null,
                                    "fonts": [
                                      "Math-I",
                                    ],
                                    "kind": "ord",
                                    "parent": [Circular],
                                    "style": undefined,
                                  },
                                ],
                                "elem": null,
                                "kind": null,
                                "parent": [Circular],
                              },
                              MathGroup {
                                "body": [
                                  FirstAtom {
                                    "elem": null,
                                    "kind": null,
                                    "parent": [Circular],
                                  },
                                  SymAtom {
                                    "char": "j",
                                    "charBox": true,
                                    "command": "j",
                                    "elem": null,
                                    "fonts": [
                                      "Math-I",
                                    ],
                                    "kind": "ord",
                                    "parent": [Circular],
                                    "style": undefined,
                                  },
                                ],
                                "elem": null,
                                "kind": null,
                                "parent": [Circular],
                              },
                            ],
                            [
                              MathGroup {
                                "body": [
                                  FirstAtom {
                                    "elem": null,
                                    "kind": null,
                                    "parent": [Circular],
                                  },
                                  SymAtom {
                                    "char": "j",
                                    "charBox": true,
                                    "command": "j",
                                    "elem": null,
                                    "fonts": [
                                      "Math-I",
                                    ],
                                    "kind": "ord",
                                    "parent": [Circular],
                                    "style": undefined,
                                  },
                                ],
                                "elem": null,
                                "kind": null,
                                "parent": [Circular],
                              },
                              [Circular],
                            ],
                          ],
                          "type": "pmatrix",
                        },
                      },
                      "children": [
                        FirstBox {
                          "atom": FirstAtom {
                            "elem": null,
                            "kind": null,
                            "parent": MathGroup {
                              "body": [
                                [Circular],
                              ],
                              "elem": null,
                              "kind": null,
                              "parent": MatrixAtom {
                                "aligns": [],
                                "elem": null,
                                "grid": false,
                                "hPos": [
                                  0,
                                  1.2000000000000002,
                                  2.4000000000000004,
                                ],
                                "kind": "inner",
                                "labels": [],
                                "parent": null,
                                "rows": [
                                  [
                                    MathGroup {
                                      "body": [
                                        FirstAtom {
                                          "elem": null,
                                          "kind": null,
                                          "parent": [Circular],
                                        },
                                        SymAtom {
                                          "char": "j",
                                          "charBox": true,
                                          "command": "j",
                                          "elem": null,
                                          "fonts": [
                                            "Math-I",
                                          ],
                                          "kind": "ord",
                                          "parent": [Circular],
                                          "style": undefined,
                                        },
                                      ],
                                      "elem": null,
                                      "kind": null,
                                      "parent": [Circular],
                                    },
                                    MathGroup {
                                      "body": [
                                        FirstAtom {
                                          "elem": null,
                                          "kind": null,
                                          "parent": [Circular],
                                        },
                                        SymAtom {
                                          "char": "j",
                                          "charBox": true,
                                          "command": "j",
                                          "elem": null,
                                          "fonts": [
                                            "Math-I",
                                          ],
                                          "kind": "ord",
                                          "parent": [Circular],
                                          "style": undefined,
                                        },
                                      ],
                                      "elem": null,
                                      "kind": null,
                                      "parent": [Circular],
                                    },
                                  ],
                                  [
                                    MathGroup {
                                      "body": [
                                        FirstAtom {
                                          "elem": null,
                                          "kind": null,
                                          "parent": [Circular],
                                        },
                                        SymAtom {
                                          "char": "j",
                                          "charBox": true,
                                          "command": "j",
                                          "elem": null,
                                          "fonts": [
                                            "Math-I",
                                          ],
                                          "kind": "ord",
                                          "parent": [Circular],
                                          "style": undefined,
                                        },
                                      ],
                                      "elem": null,
                                      "kind": null,
                                      "parent": [Circular],
                                    },
                                    [Circular],
                                  ],
                                ],
                                "type": "pmatrix",
                              },
                            },
                          },
                          "rect": {
                            "depth": 0,
                            "height": 0.4306,
                            "width": 0,
                          },
                          "space": {},
                        },
                      ],
                      "multiplier": undefined,
                      "rect": {
                        "depth": 0,
                        "height": 0.4306,
                        "width": 0,
                      },
                      "space": {},
                    },
                    "shift": -0.5900000000000003,
                  },
                ],
                "multiplier": undefined,
                "rect": {
                  "depth": 0.5900000000000003,
                  "height": 1.26952,
                  "width": 0.46905,
                },
                "space": {
                  "left": 0.5,
                },
                "tag": false,
              },
              RectBox {
                "atom": undefined,
                "classes": [
                  "sep",
                  "hidden",
                ],
                "rect": {
                  "depth": 0.9500000000000002,
                  "height": 1.4500000000000002,
                  "width": 0.02,
                },
                "space": {
                  "bottom": -0.9500000000000002,
                },
              },
            ],
            "multiplier": undefined,
            "rect": {
              "depth": 0.7844400000000002,
              "height": 1.4500000000000002,
              "width": 1.9981,
            },
            "space": {},
          },
          "shift": 0,
        },
        {
          "box": RectBox {
            "atom": undefined,
            "classes": [
              "hline",
              "hidden",
            ],
            "rect": {
              "depth": 0,
              "height": 0.02,
              "width": 0,
            },
            "space": {
              "bottom": -0,
            },
          },
          "shift": 1.4500000000000002,
        },
        {
          "box": RectBox {
            "atom": undefined,
            "classes": [
              "hline",
              "hidden",
            ],
            "rect": {
              "depth": 0,
              "height": 0.02,
              "width": 0,
            },
            "space": {
              "bottom": -0,
            },
          },
          "shift": 0.25,
        },
        {
          "box": RectBox {
            "atom": undefined,
            "classes": [
              "hline",
              "hidden",
            ],
            "rect": {
              "depth": 0,
              "height": 0.02,
              "width": 0,
            },
            "space": {
              "bottom": -0,
            },
          },
          "shift": -0.9500000000000002,
        },
      ],
      "multiplier": undefined,
      "rect": {
        "depth": 0.9500000000000002,
        "height": 1.4700000000000002,
        "width": 1.9981,
      },
      "space": {},
      "tag": false,
    },
    SymBox {
      "atom": SymAtom {
        "char": ")",
        "charBox": true,
        "command": ")",
        "elem": null,
        "fonts": [
          "Size3",
        ],
        "kind": "open",
        "parent": null,
        "style": undefined,
      },
      "char": ")",
      "font": "Size3",
      "italic": 0,
      "rect": {
        "depth": 0.95003,
        "height": 1.45,
        "width": 0.73611,
      },
      "space": {},
      "style": undefined,
    },
  ],
  "multiplier": undefined,
  "rect": {
    "depth": 0.95003,
    "height": 1.4700000000000002,
    "width": 3.47032,
  },
  "space": {},
}
`;

exports[`overline atom 1`] = `
VStackBox {
  "align": undefined,
  "atom": OverlineAtom {
    "body": MathGroup {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "char": "j",
          "charBox": true,
          "command": "j",
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": [Circular],
          "style": undefined,
        },
      ],
      "elem": null,
      "kind": null,
      "parent": [Circular],
    },
    "elem": null,
    "kind": "ord",
    "parent": null,
  },
  "children": [
    RectBox {
      "atom": undefined,
      "classes": [
        "line",
      ],
      "rect": {
        "depth": 0,
        "height": 0.04,
        "width": 0,
      },
      "space": {
        "bottom": 0.12,
        "top": 0.04,
      },
    },
    HBox {
      "atom": MathGroup {
        "body": [
          FirstAtom {
            "elem": null,
            "kind": null,
            "parent": [Circular],
          },
          SymAtom {
            "char": "j",
            "charBox": true,
            "command": "j",
            "elem": null,
            "fonts": [
              "Math-I",
            ],
            "kind": "ord",
            "parent": [Circular],
            "style": undefined,
          },
        ],
        "elem": null,
        "kind": null,
        "parent": OverlineAtom {
          "body": [Circular],
          "elem": null,
          "kind": "ord",
          "parent": null,
        },
      },
      "children": [
        FirstBox {
          "atom": FirstAtom {
            "elem": null,
            "kind": null,
            "parent": MathGroup {
              "body": [
                [Circular],
                SymAtom {
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": [Circular],
                  "style": undefined,
                },
              ],
              "elem": null,
              "kind": null,
              "parent": OverlineAtom {
                "body": [Circular],
                "elem": null,
                "kind": "ord",
                "parent": null,
              },
            },
          },
          "rect": {
            "depth": 0,
            "height": 0.4306,
            "width": 0,
          },
          "space": {},
        },
        SymBox {
          "atom": SymAtom {
            "char": "j",
            "charBox": true,
            "command": "j",
            "elem": null,
            "fonts": [
              "Math-I",
            ],
            "kind": "ord",
            "parent": MathGroup {
              "body": [
                FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": [Circular],
                },
                [Circular],
              ],
              "elem": null,
              "kind": null,
              "parent": OverlineAtom {
                "body": [Circular],
                "elem": null,
                "kind": "ord",
                "parent": null,
              },
            },
            "style": undefined,
          },
          "char": "j",
          "font": "Math-I",
          "italic": 0.05724,
          "rect": {
            "depth": 0.19444,
            "height": 0.65952,
            "width": 0.46905,
          },
          "space": {},
          "style": undefined,
        },
      ],
      "multiplier": undefined,
      "rect": {
        "depth": 0.19444,
        "height": 0.65952,
        "width": 0.46905,
      },
      "space": {},
    },
  ],
  "depth": 0.19444,
  "multiplier": undefined,
  "rect": {
    "depth": 0.19444,
    "height": 0.8595200000000001,
    "width": 0.46905,
  },
  "shift": 0.77952,
  "space": {},
}
`;

exports[`sqrt atom 1`] = `
VBox {
  "align": undefined,
  "atom": SqrtAtom {
    "body": MathGroup {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "char": "j",
          "charBox": true,
          "command": "j",
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": [Circular],
          "style": undefined,
        },
      ],
      "elem": null,
      "kind": null,
      "parent": [Circular],
    },
    "elem": null,
    "kind": "ord",
    "parent": null,
  },
  "children": [
    {
      "box": HBox {
        "atom": MathGroup {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            SymAtom {
              "char": "j",
              "charBox": true,
              "command": "j",
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": [Circular],
              "style": undefined,
            },
          ],
          "elem": null,
          "kind": null,
          "parent": SqrtAtom {
            "body": [Circular],
            "elem": null,
            "kind": "ord",
            "parent": null,
          },
        },
        "children": [
          FirstBox {
            "atom": FirstAtom {
              "elem": null,
              "kind": null,
              "parent": MathGroup {
                "body": [
                  [Circular],
                  SymAtom {
                    "char": "j",
                    "charBox": true,
                    "command": "j",
                    "elem": null,
                    "fonts": [
                      "Math-I",
                    ],
                    "kind": "ord",
                    "parent": [Circular],
                    "style": undefined,
                  },
                ],
                "elem": null,
                "kind": null,
                "parent": SqrtAtom {
                  "body": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "parent": null,
                },
              },
            },
            "rect": {
              "depth": 0,
              "height": 0.4306,
              "width": 0,
            },
            "space": {},
          },
          SymBox {
            "atom": SymAtom {
              "char": "j",
              "charBox": true,
              "command": "j",
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": MathGroup {
                "body": [
                  FirstAtom {
                    "elem": null,
                    "kind": null,
                    "parent": [Circular],
                  },
                  [Circular],
                ],
                "elem": null,
                "kind": null,
                "parent": SqrtAtom {
                  "body": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "parent": null,
                },
              },
              "style": undefined,
            },
            "char": "j",
            "font": "Math-I",
            "italic": 0.05724,
            "rect": {
              "depth": 0.19444,
              "height": 0.65952,
              "width": 0.46905,
            },
            "space": {},
            "style": undefined,
          },
        ],
        "multiplier": undefined,
        "rect": {
          "depth": 0.19444,
          "height": 0.65952,
          "width": 0.46905,
        },
        "space": {
          "left": 0.95,
        },
      },
      "shift": 0,
    },
    {
      "box": SqrtBox {
        "innerHeight": 1.0417100000000001,
        "multiplier": undefined,
        "rect": {
          "depth": 0.273585,
          "height": 0.926415,
          "width": 1.41905,
        },
        "shift": -0.273585,
        "size": 1,
        "space": {},
      },
      "shift": 0,
    },
  ],
  "multiplier": undefined,
  "rect": {
    "depth": 0.273585,
    "height": 0.926415,
    "width": 1.41905,
  },
  "space": {},
  "tag": false,
}
`;

exports[`sqrt atom 2`] = `
VBox {
  "align": undefined,
  "atom": SqrtAtom {
    "body": MathGroup {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
      ],
      "elem": null,
      "kind": null,
      "parent": [Circular],
    },
    "elem": null,
    "kind": "ord",
    "parent": null,
  },
  "children": [
    {
      "box": HBox {
        "atom": MathGroup {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
          ],
          "elem": null,
          "kind": null,
          "parent": SqrtAtom {
            "body": [Circular],
            "elem": null,
            "kind": "ord",
            "parent": null,
          },
        },
        "children": [
          FirstBox {
            "atom": FirstAtom {
              "elem": null,
              "kind": null,
              "parent": MathGroup {
                "body": [
                  [Circular],
                ],
                "elem": null,
                "kind": null,
                "parent": SqrtAtom {
                  "body": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "parent": null,
                },
              },
            },
            "rect": {
              "depth": 0,
              "height": 0.4306,
              "width": 0,
            },
            "space": {},
          },
        ],
        "multiplier": undefined,
        "rect": {
          "depth": 0,
          "height": 0.4306,
          "width": 0,
        },
        "space": {
          "left": 0.777,
        },
      },
      "shift": 0,
    },
    {
      "box": SqrtBox {
        "innerHeight": 0.61835,
        "multiplier": undefined,
        "rect": {
          "depth": 0.190825,
          "height": 0.809175,
          "width": 0.777,
        },
        "shift": -0.190825,
        "size": "small",
        "space": {},
      },
      "shift": 0,
    },
  ],
  "multiplier": undefined,
  "rect": {
    "depth": 0.190825,
    "height": 0.809175,
    "width": 0.777,
  },
  "space": {},
  "tag": false,
}
`;

exports[`supsub atom 1`] = `
HBox {
  "atom": SupSubAtom {
    "elem": null,
    "kind": "ord",
    "nuc": SymAtom {
      "char": "j",
      "charBox": true,
      "command": "j",
      "elem": null,
      "fonts": [
        "Math-I",
      ],
      "kind": "ord",
      "parent": MathGroup {
        "body": [
          FirstAtom {
            "elem": null,
            "kind": null,
            "parent": [Circular],
          },
          [Circular],
        ],
        "elem": null,
        "kind": null,
        "parent": [Circular],
      },
      "style": undefined,
    },
    "parent": null,
    "sub": MathGroup {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "char": "j",
          "charBox": true,
          "command": "j",
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": [Circular],
          "style": undefined,
        },
      ],
      "elem": null,
      "kind": null,
      "parent": [Circular],
    },
    "sup": MathGroup {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "char": "j",
          "charBox": true,
          "command": "j",
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": [Circular],
          "style": undefined,
        },
      ],
      "elem": null,
      "kind": null,
      "parent": [Circular],
    },
  },
  "children": [
    SymBox {
      "atom": SymAtom {
        "char": "j",
        "charBox": true,
        "command": "j",
        "elem": null,
        "fonts": [
          "Math-I",
        ],
        "kind": "ord",
        "parent": MathGroup {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            [Circular],
          ],
          "elem": null,
          "kind": null,
          "parent": SupSubAtom {
            "elem": null,
            "kind": "ord",
            "nuc": [Circular],
            "parent": null,
            "sub": [Circular],
            "sup": [Circular],
          },
        },
        "style": undefined,
      },
      "char": "j",
      "font": "Math-I",
      "italic": 0.05724,
      "rect": {
        "depth": 0.19444,
        "height": 0.65952,
        "width": 0.46905,
      },
      "space": {},
      "style": undefined,
    },
    VBox {
      "align": "start",
      "atom": undefined,
      "children": [
        {
          "box": HBox {
            "atom": MathGroup {
              "body": [
                FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": [Circular],
                },
                SymAtom {
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": [Circular],
                  "style": undefined,
                },
              ],
              "elem": null,
              "kind": null,
              "parent": SupSubAtom {
                "elem": null,
                "kind": "ord",
                "nuc": SymAtom {
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": [Circular],
                  "style": undefined,
                },
                "parent": null,
                "sub": [Circular],
                "sup": [Circular],
              },
            },
            "children": [
              FirstBox {
                "atom": FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": MathGroup {
                    "body": [
                      [Circular],
                      SymAtom {
                        "char": "j",
                        "charBox": true,
                        "command": "j",
                        "elem": null,
                        "fonts": [
                          "Math-I",
                        ],
                        "kind": "ord",
                        "parent": [Circular],
                        "style": undefined,
                      },
                    ],
                    "elem": null,
                    "kind": null,
                    "parent": SupSubAtom {
                      "elem": null,
                      "kind": "ord",
                      "nuc": SymAtom {
                        "char": "j",
                        "charBox": true,
                        "command": "j",
                        "elem": null,
                        "fonts": [
                          "Math-I",
                        ],
                        "kind": "ord",
                        "parent": [Circular],
                        "style": undefined,
                      },
                      "parent": null,
                      "sub": [Circular],
                      "sup": [Circular],
                    },
                  },
                },
                "rect": {
                  "depth": 0,
                  "height": 0.4306,
                  "width": 0,
                },
                "space": {},
              },
              SymBox {
                "atom": SymAtom {
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": MathGroup {
                    "body": [
                      FirstAtom {
                        "elem": null,
                        "kind": null,
                        "parent": [Circular],
                      },
                      [Circular],
                    ],
                    "elem": null,
                    "kind": null,
                    "parent": SupSubAtom {
                      "elem": null,
                      "kind": "ord",
                      "nuc": [Circular],
                      "parent": null,
                      "sub": [Circular],
                      "sup": [Circular],
                    },
                  },
                  "style": undefined,
                },
                "char": "j",
                "font": "Math-I",
                "italic": 0.05724,
                "rect": {
                  "depth": 0.19444,
                  "height": 0.65952,
                  "width": 0.46905,
                },
                "space": {},
                "style": undefined,
              },
            ],
            "multiplier": 0.7,
            "rect": {
              "depth": 0.13610799999999998,
              "height": 0.46166399999999996,
              "width": 0.328335,
            },
            "space": {
              "right": 0.07142857142857144,
            },
          },
          "shift": 0.48090799999999995,
        },
        {
          "box": HBox {
            "atom": MathGroup {
              "body": [
                FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": [Circular],
                },
                SymAtom {
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": [Circular],
                  "style": undefined,
                },
              ],
              "elem": null,
              "kind": null,
              "parent": SupSubAtom {
                "elem": null,
                "kind": "ord",
                "nuc": SymAtom {
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": [Circular],
                  "style": undefined,
                },
                "parent": null,
                "sub": [Circular],
                "sup": [Circular],
              },
            },
            "children": [
              FirstBox {
                "atom": FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": MathGroup {
                    "body": [
                      [Circular],
                      SymAtom {
                        "char": "j",
                        "charBox": true,
                        "command": "j",
                        "elem": null,
                        "fonts": [
                          "Math-I",
                        ],
                        "kind": "ord",
                        "parent": [Circular],
                        "style": undefined,
                      },
                    ],
                    "elem": null,
                    "kind": null,
                    "parent": SupSubAtom {
                      "elem": null,
                      "kind": "ord",
                      "nuc": SymAtom {
                        "char": "j",
                        "charBox": true,
                        "command": "j",
                        "elem": null,
                        "fonts": [
                          "Math-I",
                        ],
                        "kind": "ord",
                        "parent": [Circular],
                        "style": undefined,
                      },
                      "parent": null,
                      "sub": [Circular],
                      "sup": [Circular],
                    },
                  },
                },
                "rect": {
                  "depth": 0,
                  "height": 0.4306,
                  "width": 0,
                },
                "space": {},
              },
              SymBox {
                "atom": SymAtom {
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": MathGroup {
                    "body": [
                      FirstAtom {
                        "elem": null,
                        "kind": null,
                        "parent": [Circular],
                      },
                      [Circular],
                    ],
                    "elem": null,
                    "kind": null,
                    "parent": SupSubAtom {
                      "elem": null,
                      "kind": "ord",
                      "nuc": [Circular],
                      "parent": null,
                      "sub": [Circular],
                      "sup": [Circular],
                    },
                  },
                  "style": undefined,
                },
                "char": "j",
                "font": "Math-I",
                "italic": 0.05724,
                "rect": {
                  "depth": 0.19444,
                  "height": 0.65952,
                  "width": 0.46905,
                },
                "space": {},
                "style": undefined,
              },
            ],
            "multiplier": 0.7,
            "rect": {
              "depth": 0.13610799999999998,
              "height": 0.46166399999999996,
              "width": 0.328335,
            },
            "space": {
              "left": -0.08177142857142858,
              "right": 0.07142857142857144,
            },
          },
          "shift": -0.276864,
        },
      ],
      "multiplier": undefined,
      "rect": {
        "depth": 0.412972,
        "height": 0.942572,
        "width": 0.328335,
      },
      "space": {},
      "tag": false,
    },
  ],
  "multiplier": undefined,
  "rect": {
    "depth": 0.412972,
    "height": 0.942572,
    "width": 0.797385,
  },
  "space": {},
}
`;
